--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-django>=3.2,<3.3
-django-dotenv
-psycopg2-binary
-djangorestframework
-django-multiupload
+asgiref==3.7.2
+Django==3.2.23
+django-dotenv==1.4.2
+django-multiupload==0.6.1
+djangorestframework==3.14.0
+install==1.3.5
+psycopg2-binary==2.9.9
+pytz==2023.3.post1
+sqlparse==0.4.4
+typing_extensions==4.9.0
